--- a/drivers/usb/gadget/Kconfig
+++ b/drivers/usb/gadget/Kconfig
@@ -215,7 +215,7 @@ config USB_F_PRINTER
 config USB_F_TCM
 	tristate
 
-config USB_F_XAPTUM_SCM
+config USB_F_SCM
 	tristate
 
 # this first set of drivers all depend on bulk-capable hardware.
@@ -485,10 +485,10 @@ config USB_CONFIGFS_F_TCM
 	  Both protocols can work on USB2.0 and USB3.0.
 	  UAS utilizes the USB 3.0 feature called streams support.
 
-config USB_CONFIGFS_F_XAPTUM_SCM
-        bool "Xaptum SCM driver"
+config USB_CONFIGFS_F_SCM
+        bool "Socket Control Model Driver"
 	depends on USB_CONFIGFS
-	select USB_F_XAPTUM_SCM
+	select USB_F_SCM
         help
           This driver adds the SCM function to the Linux kernel for use
           with Xaptum router cards
